--- a/index.html
+++ b/index.html
@@ -33,11 +33,16 @@
             </div>
             <div class="hello">
                 <h1>Hello, world</h1>
-                <p>I'm Chris Ota, a San Francisco-based product designer working at Lyft. I am passionate about
+                <p>I'm <strong><i>Intelligence</i></strong>, a Nigerian-based product designer <!--working at Lyft-->. I
+                    am
+                    passionate
+                    about
                     researching
                     problems and solving them through design while providing a pleasant user experience.</p>
                 <div class="email">
-                    <a href="resume">Resume</a><a href="email">Email</a>
+                    <a href="resume">Resume</a>
+                    <a href="mailto:Uthmanabdullahi2020@gmail.com">Email</a>
+
                 </div>
             </div>
             <div class="background"></div>
@@ -228,7 +233,8 @@
                 <div class="left mallDesign">
                     <div class="thick">
                         <p>14 Years Ago...</p>
-                        <p>I graduated from <a href="college">Kapiolani Community College</a> with a degree in Interface
+                        <p>I graduated from <a href="college">Kapiolani Community College</a> with a degree in
+                            Interface
                             Design
                             and began my career working for different agencies in Hawaii.</p>
                         <p>In 2015, I packed my bags and decided to move to San Francisco for a fresh start and to
@@ -351,14 +357,11 @@
                 <p></p>
             </div>
             <div class="links">
-                <a href="Email">Email</a>
-                <a href="Dribbble">Dribbble</a>
-                <a href="CodePen">CodePen</a>
-                <a href="LinkedIn">LinkedIn</a>
-                <a href="Twitter">Twitter</a>
-                <a href="Medium">Medium</a>
+                <a href="mailto:Uthmanabdullahi2020@gmail.com">Email</a>
+                <a href="https://codepen.io/Intelligence247-the-flexboxer/pen/MWBeaqa">CodePen</a>
+                <a href="https://www.linkedin.com/in/usman-abdullahi-125a3a23b/">LinkedIn</a>
+                <a href="https://twitter.com/I_n_telligence">Twitter</a>
             </div>
-
 
         </section>
     </main>
