--- a/index.html
+++ b/index.html
@@ -357,10 +357,11 @@
                 <p></p>
             </div>
             <div class="links">
-                <a href="mailto:Uthmanabdullahi2020@gmail.com">Email</a>
-                <a href="https://codepen.io/Intelligence247-the-flexboxer/pen/MWBeaqa">CodePen</a>
-                <a href="https://www.linkedin.com/in/usman-abdullahi-125a3a23b/">LinkedIn</a>
-                <a href="https://twitter.com/I_n_telligence">Twitter</a>
+                <a href="mailto:Uthmanabdullahi2020@gmail.com" target="_blank">Email</a>
+                <a href="https://codepen.io/Intelligence247-the-flexboxer/pen/MWBeaqa" target="_blank">CodePen</a>
+                <a href="https://www.linkedin.com/in/usman-abdullahi-125a3a23b/" target="_blank">LinkedIn</a>
+                <a href="https://twitter.com/I_n_telligence" target="_blank">Twitter</a>
+                <a href="https://github.com/Intelligence247" target="_blank">Github</a>
             </div>
 
         </section>
