--- a/index.html
+++ b/index.html
@@ -11,8 +11,25 @@
 </head>
 
 <body>
+    <!-- <div class="ty ty2">
+        <div class="head">
+            <div class="signs">
+                <img src="./media/circ2.png" alt="">
+                <img src="./media/plus.png" alt="">
+                <div class="triangle">
+                    <p></p>
+                </div>
+            </div>
 
+            <div class="navlinks">
+                <a href="#work">WORK</a>
+                <a href="#about">ABOUT</a>
+                <a href="#contact">CONTACT</a>
+            </div>
+        </div>
+    </div> -->
     <header>
+
         <main>
             <div class="ty">
                 <div class="head">
