--- a/index.html
+++ b/index.html
@@ -11,23 +11,24 @@
 </head>
 
 <body>
-    <!-- <div class="ty ty2">
-        <div class="head">
-            <div class="signs">
-                <img src="./media/circ2.png" alt="">
-                <img src="./media/plus.png" alt="">
-                <div class="triangle">
-                    <p></p>
+    <div class="tyScroll">
+        <div class="headScroll">
+            <a href="./index.html">
+                <div class="signs">
+                    <img src="./media/bluecirc (1).png" alt="">
+                    <img src="./media/blueplus.png" alt="">
+                    <div class="triangle">
+                        <p></p>
+                    </div>
                 </div>
-            </div>
-
+            </a>
             <div class="navlinks">
                 <a href="#work">WORK</a>
                 <a href="#about">ABOUT</a>
                 <a href="#contact">CONTACT</a>
             </div>
         </div>
-    </div> -->
+    </div>
     <header>
 
         <main>
