--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </div>
     </div>
-    <header>
+    <header class="zindexheader">
 
         <main>
             <div class="ty">
