--- a/index.html
+++ b/index.html
@@ -273,6 +273,16 @@
 
         <!-- clock starts here -->
         <div class="clockwrapper">
+            <div class="digital">
+                <div class="shadow">
+                    <div class="hourd"></div>
+                    <div class="mind"></div>
+                    <div class="secd"></div>
+                    <div class="ampm">Zs</div>
+                </div>
+
+            </div>
+
             <div class="clockcirc">
 
                 <p style="--x:1;"></p>
