--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                     <div class="triangle">
                         <p></p>
                     </div>
+                    <!-- <img src="./media/lightbluesvg.svg" alt="" class="svgwhite"> -->
+
+
                 </div>
             </a>
             <div class="navlinks">
@@ -34,13 +37,14 @@
         <main>
             <div class="ty">
                 <div class="head">
-                    <div class="signs">
+                    <!-- <div class="signs">
                         <img src="./media/circ2.png" alt="">
                         <img src="./media/plus.png" alt="">
                         <div class="triangle">
                             <p></p>
                         </div>
-                    </div>
+                    </div> -->
+                    <img src="./media/svgwhite.svg" alt="" class="svgwhite">
 
                     <div class="navlinks">
                         <a href="#work">WORK</a>
