--- a/codepen.html
+++ b/codepen.html
@@ -12,15 +12,12 @@
 <body>
     <div class="wrapper">
         <header>
-            <div class="header"> <a href="./index.html">
-                    <div class="signs">
-                        <img src="./media/bluecirc (1).png" alt="">
-                        <img src="./media/blueplus.png" alt="">
-                        <div class="triangle">
-                            <p></p>
-                        </div>
-                    </div>
-                </a>
+            <div class="header">
+                <div class="signs">
+                    <a href="./index.html">
+                        <img src="./media/lightbluesvg.svg" alt="" class="svgwhite"></a>
+                </div>
+
                 <div class="navlinks">
                     <a href="./index.html#work">WORK</a>
                     <a href="./index.html#about">ABOUT</a>
