--- a/index.html
+++ b/index.html
@@ -13,24 +13,25 @@
 <body>
     <div class="tyScroll">
         <div class="headScroll">
-            <a href="./index.html">
+            <!-- <a href="./index.html">
                 <div class="signs">
                     <img src="./media/bluecirc (1).png" alt="">
                     <img src="./media/blueplus.png" alt="">
                     <div class="triangle">
                         <p></p>
-                    </div>
-                    <!-- <img src="./media/lightbluesvg.svg" alt="" class="svgwhite"> -->
+                    </div> -->
+            <a href="./index.html">
+                <img src="./media/lightbluesvg.svg" alt="" class="svgwhite">
 
 
-                </div>
             </a>
-            <div class="navlinks">
+            <div class="navlinks nav2">
                 <a href="#work">WORK</a>
                 <a href="#about">ABOUT</a>
                 <a href="#contact">CONTACT</a>
             </div>
         </div>
+    </div>
     </div>
     <header class="zindexheader">
 
@@ -44,7 +45,8 @@
                             <p></p>
                         </div>
                     </div> -->
-                    <img src="./media/svgwhite.svg" alt="" class="svgwhite">
+                    <a href="./index.html">
+                        <img src="./media/svgwhite.svg" alt="" class="svgwhite"></a>
 
                     <div class="navlinks">
                         <a href="#work">WORK</a>
