--- a/clearstream.html
+++ b/clearstream.html
@@ -17,15 +17,17 @@
     <main class="posi">
         <div class="head">
             <div class="signs">
-                <a href="./index.html">
+                <!-- <a href="./index.html">
                     <img src="./media/bluecirc (1).png" alt="">
                     <img src="./media/blueplus.png" alt="">
                     <div class="triangle">
                         <p></p>
                     </div>
-
-            </div></a>
-
+                </a> -->
+                <a href="./index.html">
+                    <img src="./media/lightbluesvg.svg" alt="" class="svgwhite">
+            </div>
+            </a>
             <div class="navlinks">
                 <a href="./index.html#work">WORK</a>
                 <a href="./index.html#about">ABOUT</a>
