--- a/schoolkine.html
+++ b/schoolkine.html
@@ -16,13 +16,17 @@
     <main class="posi">
         <div class="head">
             <div class="signs">
-                <a href="./index.html">
+                <!-- <a href="./index.html">
                     <img src="./media/bluecirc (1).png" alt="">
                     <img src="./media/blueplus.png" alt="">
                     <div class="triangle">
                         <p></p>
-                    </div>
+                    </div> -->
+                <a href="./index.html">
+                    <img src="./media/lightbluesvg.svg" alt="" class="svgwhite">
 
+
+                </a>
             </div></a>
 
             <div class="navlinks">
