--- a/index.html
+++ b/index.html
@@ -13,18 +13,11 @@
 <body>
     <div class="tyScroll">
         <div class="headScroll">
-            <!-- <a href="./index.html">
-                <div class="signs">
-                    <img src="./media/bluecirc (1).png" alt="">
-                    <img src="./media/blueplus.png" alt="">
-                    <div class="triangle">
-                        <p></p>
-                    </div> -->
+
             <a href="./index.html">
                 <img src="./media/lightbluesvg.svg" alt="" class="svgwhite">
-
-
             </a>
+
             <div class="navlinks nav2">
                 <a href="#work">WORK</a>
                 <a href="#about">ABOUT</a>
@@ -34,17 +27,11 @@
     </div>
     </div>
     <header class="zindexheader">
-
+        <div class="heroes"></div>
         <main>
             <div class="ty">
                 <div class="head">
-                    <!-- <div class="signs">
-                        <img src="./media/circ2.png" alt="">
-                        <img src="./media/plus.png" alt="">
-                        <div class="triangle">
-                            <p></p>
-                        </div>
-                    </div> -->
+
                     <a href="./index.html">
                         <img src="./media/svgwhite.svg" alt="" class="svgwhite"></a>
 
