--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <img src="./media/lightbluesvg.svg" alt="" class="svgwhite">
             </a>
 
-            <div class="navlinks nav2">
+            <div class="navlinks">
                 <a href="#work">WORK</a>
                 <a href="#about">ABOUT</a>
                 <a href="#contact">CONTACT</a>
@@ -410,7 +410,6 @@
         <div class="last">Coded with ♥. Copyright © 2022 Chris Ota.</div>
         <div class="background2"></div>
     </footer>
-
     <script src="script.js"></script>
 </body>
 
