--- a/index.html
+++ b/index.html
@@ -19,17 +19,16 @@
             </a>
 
             <div class="navlinks">
-                <a href="#work">WORK</a>
-                <a href="#about">ABOUT</a>
-                <a href="#contact">CONTACT</a>
+                <a href="#work" class="colorS">WORK</a>
+                <a href="#about" class="colorS">ABOUT</a>
+                <a href="#contact" class="colorS">CONTACT</a>
             </div>
         </div>
-    </div>
     </div>
     <header class="zindexheader">
         <div class="heroes"></div>
         <main>
-            <div class="ty">
+            <!-- <div class="ty">
                 <div class="head">
 
                     <a href="./index.html">
@@ -41,7 +40,7 @@
                         <a href="#contact">CONTACT</a>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="hello">
                 <h1>Hello, world</h1>
                 <p>I'm <strong><i>Intelligence</i></strong>, a Nigerian-based product designer <!--working at Lyft-->. I
