--- a/clearstream.html
+++ b/clearstream.html
@@ -17,23 +17,18 @@
     <main class="posi">
         <div class="head">
             <div class="signs">
-                <!-- <a href="./index.html">
-                    <img src="./media/bluecirc (1).png" alt="">
-                    <img src="./media/blueplus.png" alt="">
-                    <div class="triangle">
-                        <p></p>
-                    </div>
-                </a> -->
+
                 <a href="./index.html">
-                    <img src="./media/lightbluesvg.svg" alt="" class="svgwhite">
+                    <img src="./media/lightbluesvg.svg" alt="" class="svgwhite"> </a>
             </div>
-            </a>
+
             <div class="navlinks">
                 <a href="./index.html#work">WORK</a>
                 <a href="./index.html#about">ABOUT</a>
                 <a href="./index.html#contact">CONTACT</a>
             </div>
         </div>
+
     </main>
 
     <header>
